# software

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  vcpkg-configuration.json  vcpkg.json  windows-build-notes.md
embedded/: AGENTS.md  CMakeLists.txt  CMakeLists.txt-back
embedded/bases/: BUILD_SOURCES.md  CMakeLists.txt  README.md  notes.md
embedded/bases/bittag-base-jlcpcb-v3/: CMakeLists.txt  project.mk
embedded/bases/bittag-base-v7/: project.mk
embedded/bases/common/: make.mk
embedded/bases/tag-base-c071/: CMakeLists.txt  project.mk
embedded/bases/tag-breakout-base-jlcpcb32-v1/: CMakeLists.txt  project.mk
embedded/bases/tag-breakout-base-l432-u375-1v8/: CMakeLists.txt  Makefile  make-l432.mk  project.mk
embedded/bases/tag-breakout-base-l432-v1/: Note.md  project.mk
embedded/boards/: CMakeLists.txt  README.md
embedded/boards/BitPresTag-Test/: CMakeLists.txt
embedded/boards/BitPresTagv1/: CMakeLists.txt
embedded/boards/BitTagNG/: CMakeLists.txt
embedded/boards/BitTagv6/: CMakeLists.txt
embedded/boards/CompassTagv1/: CMakeLists.txt
embedded/boards/IMUTagNandv1/: CMakeLists.txt
embedded/boards/IMUTagU375/: CMakeLists.txt
embedded/boards/IMUTagv1/: CMakeLists.txt
embedded/boards/PresTagBreakout/: CMakeLists.txt
embedded/boards/PresTagv3/: CMakeLists.txt
embedded/boards/TagSteval/: CMakeLists.txt
embedded/boards/bittag-base-jlcpcb-v2/: CMakeLists.txt
embedded/boards/bittag-base-jlcpcb-v3/: CMakeLists.txt
embedded/boards/bittag-base-v7/: Note.txt
embedded/boards/tag-base-c071-v1/: CMakeLists.txt
embedded/boards/tag-breakout-base-jlcpcb32-v1/: CMakeLists.txt
embedded/boards/tag-breakout-base-l432-u375-1v8/: CMakeLists.txt
embedded/boards/tag-breakout-base-l432-v1/: CMakeLists.txt
embedded/boards/tools/: README.md  board.fmpp.in  generate_board_chcfg.py
embedded/design/: build-orientation.md  chibios-stm32u3-rtc-report.md  imutag-u375-bringup-closeout.md
embedded/docs/: README.md
embedded/proto-c/: CMakeLists.txt  config-gen.cc
embedded/proto-c/bitprestag-proto-c/: default-config.json
embedded/proto-c/bittag-ng-proto-c/: default-config.json  tag.override.options  tagdata.override.options
embedded/proto-c/bittag-proto-c/: CMakeLists.txt  default-config.json  tag.override.options
embedded/proto-c/compasstag-proto-c/: default-config.json
embedded/proto-c/default-options/: tag.options  tagdata.options
embedded/proto-c/imutag-proto-c/: CMakeLists.txt  default-config.json  tag.override.options  tagdata.override.options
embedded/proto-c/prestag-proto-c/: default-config.json
embedded/proto-c/prestagraw-proto-c/: CMakeLists.txt  default-config.json  tag.override.options  tagdata.override.options
embedded/tags/: BUILD_SOURCES.md  CMakeLists.txt  CUSTOM_DEFINES.md  README.md  restart-recovery-notes.md
embedded/tags/BitPresTag/: CMakeLists.txt  project.mk  values.txt
embedded/tags/BitPresTagMX25R/: CMakeLists.txt  project.mk
embedded/tags/BitTag/: CMakeLists.txt  project.mk
embedded/tags/BitTag-legacy/: CMakeLists.txt
embedded/tags/BitTagNG/: project.mk
embedded/tags/BitTagNG-lis2du12/: project.mk
embedded/tags/BreakoutDownloadTest/: CMakeLists.txt
embedded/tags/CompassTag/: CMakeLists.txt  project.mk
embedded/tags/CompassTag-debug/: CMakeLists.txt  Makefile
embedded/tags/CompassTagAT25/: .gitignore  project.mk
embedded/tags/CompassTagAT25Breakout/: CMakeLists.txt  project.mk
embedded/tags/IMUTagBreakout/: PerformanceNotes.md  project.mk
embedded/tags/IMUTagNandv1/: CMakeLists.txt  project.mk
embedded/tags/IMUTagU375/: CMakeLists.txt  Makefile  project.mk
embedded/tags/IMUTagU3bmm350/: CMakeLists.txt  README.md  project.mk
embedded/tags/IMUTagbmm350/: CMakeLists.txt  Makefile  README.md  project.mk
embedded/tags/NucleoTag/: CMakeLists.txt
embedded/tags/PresTag/: CMakeLists.txt  project.mk
embedded/tags/PresTagBMPBreakout/: notes.md  project.mk
embedded/tags/PresTagBreakout/: CMakeLists.txt  project.mk
embedded/tags/PresTagRaw/: CMakeLists.txt  project.mk
embedded/tags/common/: README.md  STM32L432xC.ld  STM32U375xG.ld  make-u375.mk  make.mk  nil-make.mk
embedded/tags/design/: custom-defines.md  restart-recovery.md  u375-stop-support.md
embedded/tags/families/: README.md
embedded/tools/: stm32_programmer_select.py
host/applications/compviz/: CMakeLists.txt  README.md  controls.cpp  main.cpp  mainwindow.cpp  mainwindow.h  sqlite_utils.h  sqliteload.cpp
host/applications/qtcalibrate/: CMakeLists.txt  README.md  compassdata.cpp  compassdata.h  ema.h  magplot.cpp  magplot.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  sinbin.cpp  sinbin.h
host/applications/qtmon/: CMakeLists.txt  logwindow.cpp  logwindow.h  logwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h
host/applications/sensorviz/: CMakeLists.txt  README.md  ROADMAP.md  compass_transforms.cpp  controls.cpp  dataloading.cpp  interaction.cpp  main.cpp  mainwindow.cpp  mainwindow.h  plotting.cpp  sensor_preferences.cpp  sensor_preferences.h  sensorprofile.cpp  sensorprofile.h  sensorstream.h  sqlite_loader.cpp  sqlite_loader.h  stream_actions.cpp  transforms.cpp
host/applications/tag-orientation/: CMakeLists.txt  main.cpp
host/commandline/: CMakeLists.txt  README.md  dwnld.cc  tag-attach-cycle.cc  tag-reset.cc  tag-stop.cc  test.cc
host/commandline/cli/: CMakeLists.txt  dwnld.cc  dwnld.h  tag-info.cc  test.cc
host/libraries/sensoranalysis/: CMakeLists.txt  README.md  compass_processor.cpp  compass_processor.h  compass_types.cpp  compass_types.h
host/libraries/sensorui/: CMakeLists.txt  README.md  attitude_display.cpp  attitude_display.h  compass_calibration_dialog.cpp  sensorui.qrc  (+3 more)
host/qcustomplot/: CMakeLists.txt  qcustomplot.cpp
software/: CMakeLists.txt
software/embedded/: CMakeLists.txt
software/host/: CMakeLists.txt  CMakeLists.txt-back  README.md  qtfiledialog.h  qthoststyle.h  windows_tool_launcher.cpp
software/proto/: CMakeLists.txt  README.md  config-gen.cc  tag.proto  tagdata-archive.proto  tagdata.proto
(+2521 files in other folders)
