cmake_minimum_required(VERSION 3.15)

#add_subdirectory(AccelTag)
#add_subdirectory(AccelTagNG)
#add_subdirectory(BitTagv5)
add_subdirectory(BitTag)
add_subdirectory(BitTag-legacy)
add_subdirectory(PresTag)
add_subdirectory(PresTagRaw)
add_subdirectory(BitPresTag)
add_subdirectory(BitPresTagMX25R)
#add_subdirectory(PresTagBreakout)
#add_subdirectory(PresTagBMPBreakout)
#add_subdirectory(BreakoutDownloadTest)
add_subdirectory(BitTagNG)
#add_subdirectory(BitTagNG-lis2du12)
add_subdirectory(CompassTag)
add_subdirectory(CompassTagAT25Breakout)
add_subdirectory(CompassTagAT25)
#add_subdirectory(CompassTag-debug)
add_subdirectory(IMUTagBreakout)
add_subdirectory(IMUTagbmm350)
add_subdirectory(IMUTagNandv1)
add_subdirectory(IMUTagU375)
add_subdirectory(IMUTagU3bmm350)
#add_subdirectory(LuxTag)
#add_subdirectory(NucleoTag)
#add_subdirectory(BitTagNG-proto)
